--- a/project_gable/Gable/GUI/Views/MainWindow.axaml
+++ b/project_gable/Gable/GUI/Views/MainWindow.axaml
@@ -135,7 +135,7 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <Image Height="16" Width="16" Source="/Assets/avalonia-logo.ico" />
-                            <TextBlock Grid.Column="1" Text="{Binding Title}" />
+                            <TextBlock Grid.Column="1" Text="{Binding DisplayName}" />
                             <Grid.ContextMenu>
                                 <ContextMenu>
                                     <MenuItem Header="Add Folder"
