--- a/project_gable/Gable/GUI/Views/MainWindow.axaml
+++ b/project_gable/Gable/GUI/Views/MainWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="using:Gable.ViewModels"
+    xmlns:vm="using:Gable.GUI.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -134,7 +134,8 @@
                                 <ColumnDefinition Width="20" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <Image Height="16" Width="16" Source="/Assets/avalonia-logo.ico" />
+                            <Image Height="16" Width="16"
+                                Source="{Binding IconPath, Converter={x:Static vm:IconPathConverter.Instance}}" />
                             <TextBlock Grid.Column="1" Text="{Binding DisplayName}" />
                             <Grid.ContextMenu>
                                 <ContextMenu>
