--- a/project_gable/Gable/GUI/Views/MainWindow.axaml
+++ b/project_gable/Gable/GUI/Views/MainWindow.axaml
@@ -131,7 +131,7 @@
                     <TreeDataTemplate ItemsSource="{Binding SubNodes}">
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="20" />
+                                <ColumnDefinition Width="16" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <Image Height="16" Width="16"
@@ -157,9 +157,9 @@
             </TreeView>
             <GridSplitter Grid.Column="1" Background="Black" ResizeDirection="Columns" />
             <Grid Grid.Column="2" RowDefinitions="*, 1, 100">
-                <Rectangle Grid.Row="0" Fill="Blue" />
+                <Rectangle Grid.Row="0" Fill="Black" />
                 <GridSplitter Grid.Row="1" Background="Black" ResizeDirection="Rows" />
-                <Rectangle Grid.Row="2" Fill="Red" />
+                <Rectangle Grid.Row="2" Fill="Black" />
             </Grid>
         </Grid>
     </DockPanel>
